--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,3 +18,10 @@ environment:
   flutter: ">=2.0.0"
 
 flutter:
+  plugin:
+    platforms:
+      android:
+        package: university.unication.sms_autofill
+        pluginClass: OTPPlugin
+      ios:
+        pluginClass: OTPPlugin
